overflow-x fixed

--- a/src/stylesheets/global.css
+++ b/src/stylesheets/global.css
@@ -21,6 +21,7 @@ form {
 
 input {
   min-width: 150px;
+  text-align: center;
 }
 
 input:focus {
@@ -47,7 +48,6 @@ select:focus {
 }
 
 body {
-  display: flex;
   justify-content: center;
 }
 
